public interface Lista extends Coleccion {
}
